Criação dos editar

--- a/pages/posto/editar--posto.html
+++ b/pages/posto/editar--posto.html
@@ -31,7 +31,7 @@
       <ol class="breadcrumb blue-ctj">
         <li><a href="#">Acadêmico</a></li>
         <li class="ml-xs mr-xs"> /</li>
-        <li class="active">Unidades</li>
+        <li class="active">Postos avançados</li>
         <li style="float:right;">
           <button class="btn btn-inline btn-secondary-outline btn-sm"><i class="fa fa-question-circle"
                                                                          aria-hidden="true"></i> Ajuda
@@ -49,7 +49,7 @@
                 <li class="nav-item">
                   <a class="nav-link active" href="#tabs-servicos-tab-1" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
-										Unidades
+										Postos avançados
 										<span class="label label-pill label-primary">100</span>
 									</span>
                   </a>
@@ -58,7 +58,7 @@
                   <a class="nav-link" href="#tabs-servicos-tab-2" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
- Criar nova unidade
+ Criar novo posto avançado
 									</span>
                   </a>
                 </li>
@@ -71,7 +71,62 @@
 
             <section role="tabpanel" class="tab-pane fade in active" id="tabs-servicos-tab-1">
               <section>
-                <div class="row mb-md">
+                <div id="collapse-busca-one" class="collapse mb-md" role="tabpanel"
+                            aria-labelledby="collapse-busca-one"
+                            aria-expanded="true">
+                <section class="card">
+                  <div class="card-block">
+                    <div class="row">
+
+                      <div class="col-sm-5">
+                        <label class="form-label semibold" for="">Nome</label>
+                        <input type="text" class="form-control" aria-label="" placeholder="Nome">
+                      </div>
+                      <div class="col-sm-3">
+                        <label class="form-label semibold" for="">Unidade</label>
+                        <select class="select2 select2-arrow">
+                          <option>Selecione</option>
+                          <option>Asa sul</option>
+                          <option>Asa norte</option>
+                          <option>Águas claras</option>
+                        </select>
+                      </div>
+                      <div class="col-sm-4">
+                        <label class="form-label semibold" for="">Situação</label>
+                        <div class="form-group">
+                          <div class="btn-group btn-group-sm" data-toggle="buttons">
+                            <label class="btn btn-secondary-outline active">
+                              <input type="radio" name="options" id="" autocomplete="off" checked="">
+                              Todos
+                            </label>
+                            <label class="btn btn-secondary-outline">
+                              <input type="radio" name="options" id="" autocomplete="off"> Ativo
+                            </label>
+                            <label class="btn btn-secondary-outline">
+                              <input type="radio" name="options" id="" autocomplete="off"> Inativo
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row divider-top">
+                      <div class="col-sm-12">
+                        <div>
+                          <button type="button" class="btn btn-primary btn-sm mt-sm"><i class="fa fa-search mr-xs"
+                                                                                        aria-hidden="true"></i>
+                            Buscar
+                          </button>
+                          <button type="button" class="btn btn-secondary btn-sm ml-md mt-sm" data-toggle="collapse"
+                                  data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
+                                  aria-controls="collapseOne"><i class="fa fa-times" aria-hidden="true"></i> Cancelar
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </div>
+                <div class="row">
                   <div class="col-sm-9">
                     <div class="form-control-wrapper form-control-icon-right">
                       <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
@@ -87,51 +142,7 @@
                     </p>
                   </div>
                 </div>
-                <div id="collapse-busca-one" class="collapse" role="tabpanel"
-                     aria-labelledby="collapse-busca-one"
-                     aria-expanded="true">
-                  <section class="card">
-                    <div class="card-block">
-                      <div class="row">
-                        <div class="col-sm-8">
-                          <label class="form-label semibold" for="">Nome da unidade</label>
-                          <input type="text" class="form-control" aria-label="" placeholder="Nome da unidade">
-                        </div>
-                        <div class="col-sm-4">
-                          <label class="form-label semibold" for="">Status</label>
-                          <div class="form-group">
-                            <div class="btn-group btn-group-sm" data-toggle="buttons">
-                              <label class="btn btn-secondary active">
-                                <input type="radio" name="options" id="" autocomplete="off" checked="">
-                                Todos
-                              </label>
-                              <label class="btn btn-secondary-outline">
-                                <input type="radio" name="options" id="" autocomplete="off"> Ativo
-                              </label>
-                              <label class="btn btn-secondary-outline">
-                                <input type="radio" name="options" id="" autocomplete="off"> Inativo
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row divider-top">
-                        <div class="col-sm-12">
-                          <div>
-                            <button type="button" class="btn btn-primary btn-sm mt-sm"><i class="fa fa-search mr-xs"
-                                                                                          aria-hidden="true"></i>
-                              Buscar
-                            </button>
-                            <button type="button" class="btn btn-secondary btn-sm ml-md mt-sm" data-toggle="collapse"
-                                    data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
-                                    aria-controls="collapseOne"><i class="fa fa-times" aria-hidden="true"></i> Cancelar
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </section>
-                </div>
+
               </section>
               <div class="row mt-md">
                 <div class="col-sm-12">
@@ -139,18 +150,20 @@
                     <table class="datatable-on table table-hover" cellspacing="0" width="100%">
                       <thead>
                       <tr>
+                        <th>Nome</th>
                         <th>Unidade</th>
-                        <th>Responsável pedagógico</th>
-                        <th>Telefone principal</th>
-                        <th>Status</th>
+                        <th>Gestor principal</th>
+                        <th>Telefone</th>
+                        <th>Situação</th>
                         <th class="text-right">Ações</th>
                       </tr>
                       </thead>
                       <tbody>
 
                       <tr>
-                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-                                       href="#ModalDetalhaPosto">Asa sul</a></strong></td>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaPosto"
+                                       href="#ModalDetalhaPosto">Leonardo Da Vinci</a></strong></td>
+                        <td>Asa sul</td>
                         <td>João Carlos Silva</td>
                         <td>(61) 0000-0000</td>
                         <td>Ativo</td>
@@ -161,21 +174,22 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--unidade.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Inativar</a>
+                                Excluir</a>
                             </div>
                           </div>
                         </td>
                       </tr>
 
                       <tr>
-                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-                                       href="#ModalDetalhaPosto">Asa norte</a></strong></td>
-                        <td>Aline Silveira</td>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaPosto"
+                                       href="#ModalDetalhaPosto">Sigma</a></strong></td>
+                        <td>Asa norte</td>
+                        <td>Aline Silva Linhares</td>
                         <td>(61) 0000-0000</td>
                         <td>Ativo</td>
                         <td>
@@ -185,12 +199,12 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--unidade.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Inativar</a>
+                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -207,7 +221,7 @@
             <section role="tabpanel" class="tab-pane fade" id="tabs-servicos-tab-2">
               <div class="row mt-sm">
                 <div class="col-sm-12">
-                  <h4 class="semibold"> Cadastrar nova unidade</h4>
+                  <h4 class="semibold"> Cadastrar novo posto avançado</h4>
                   <small>Campos com asterisco vermelho ( <span class="semibold text-danger">*</span> ) são
                     obrigatórios
                   </small>
@@ -216,7 +230,7 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados da unidade
+                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados do posto
                   </h5>
                 </header>
                 <div class="card-block">
@@ -230,11 +244,22 @@
                         <option>Águas claras</option>
                       </select>
                     </div>
+                    <div class="col-sm-8">
+                      <label class="form-label semibold" for="">Nome</label>
+                      <select class="select2 select2-arrow">
+                        <option>Selecione</option>
+                        <option>Leonardo da Vinci</option>
+                        <option>Sigma</option>
+                        <option>CTJ</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="row mt-lg">
                     <div class="col-sm-4">
                       <label class="form-label semibold" for="">CNPJ</label>
                       <p>000.000.000/0000-00</p>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-8">
                       <label class="form-label semibold" for="">Centro de custo</label>
                       <p>Centro de custo</p>
                     </div>
@@ -245,7 +270,7 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização da unidade
+                  <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização do posto
                   </h5>
                 </header>
                 <div class="card-block">
@@ -291,8 +316,12 @@
                 </header>
                 <div class="card-block">
                   <div class="row">
-                    <div class="col-sm-12">
-                      <label class="form-label semibold" for="">Responsável pedagógico</label>
+                    <div class="col-sm-6">
+                      <label class="form-label semibold" for="">Gestor do contrato</label>
+                      <input type="text" class="form-control" aria-label="" placeholder="Gestor do contrato">
+                    </div>
+                    <div class="col-sm-6">
+                      <label class="form-label semibold" for="">Responsável acadêmico</label>
                       <select class="select2 select2-arrow">
                         <option>Selecione</option>
                         <option>Luan Almeida Barbosa</option>
@@ -305,7 +334,6 @@
                     <div class="col-sm-12">
                       <label class="form-label semibold" for="">Interessados</label>
                       <select class="select2" multiple="multiple">
-                        <option>Selecione</option>
                         <option>Luan Almeida Barbosa</option>
                         <option>Otávio Goncalves Souza</option>
                         <option>Ana Souza Martins</option>
@@ -385,13 +413,13 @@
 
 
 <!-- Modal detalha posto -->
-<div class="modal fade" id="ModalDetalhaUnidade" tabindex="-1" role="dialog" aria-labelledby="ModalDetalhaUnidade">
+<div class="modal fade" id="ModalDetalhaPosto" tabindex="-1" role="dialog" aria-labelledby="ModalDetalhaPosto">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                 aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Detalhes da unidade</h4>
+        <h4 class="modal-title">Detalhes do posto avançado</h4>
       </div>
       <div class="modal-body">
 
@@ -403,15 +431,19 @@
           </header>
           <div class="card-block">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-sm-3">
+                <label class="form-label semibold" for="">Nome</label>
+                <p>Leonardo da Vinci</p>
+              </div>
+              <div class="col-sm-3">
                 <label class="form-label semibold" for="">Unidade</label>
                 <p>Asa sul</p>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                 <label class="form-label semibold" for="">CNPJ</label>
                 <p>000.000.000/0000-00</p>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-3ß">
                 <label class="form-label semibold" for="">Centro de custo</label>
                 <p>Centro de custo</p>
               </div>
@@ -422,7 +454,7 @@
 
         <section class="card card-default mt-md">
           <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização do posto
+            <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização
             </h5>
           </header>
           <div class="card-block">
@@ -468,11 +500,15 @@
           </header>
           <div class="card-block">
             <div class="row">
-              <div class="col-sm-6">
-                <label class="form-label semibold" for="">Responsável pedagógico</label>
+              <div class="col-sm-4">
+                <label class="form-label semibold" for="">Gestor do contrato</label>
                 <p>Rodrigo Sousa Martins</p>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-4">
+                <label class="form-label semibold" for="">Responsável acadêmico</label>
+                <p>Rodrigo Sousa Martins</p>
+              </div>
+              <div class="col-sm-4">
                 <label class="form-label semibold" for="">Interessados</label>
                 <p>Luan Almeida Barbosa</p>
                 <p>Otávio Goncalves Souza</p>
