Ajustes no editar"

--- a/pages/academico/editar--niveis.html
+++ b/pages/academico/editar--niveis.html
@@ -140,12 +140,11 @@
                         <div class="tbl-row">
                           <div class="tbl-cell tbl-cell-title clearfix">
                             <h4 class="semibold"><i class="fa fa-book mr-xs" aria-hidden="true"></i> Materiais didáticos
+                              <small class="text-warning ml-md"><i class="fa fa-exclamation-triangle mr-xs"
+                                                             aria-hidden="true"></i>
+                                Existem pendências nesta listagem
+                              </small>
                             </h4>
-                            <p class="text-warning pull-right"><i class="fa fa-exclamation-triangle mr-xs"
-                                                       aria-hidden="true"></i>
-                              Existem pendências nesta listagem
-                            </p>
-
                           </div>
                           <div class="tbl-cell tbl-cell-action-bordered">
                             <form>
