--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -443,7 +443,7 @@
                 <label class="form-label semibold" for="">CNPJ</label>
                 <p>000.000.000/0000-00</p>
               </div>
-              <div class="col-sm-3ß">
+              <div class="col-sm-3">
                 <label class="form-label semibold" for="">Centro de custo</label>
                 <p>Centro de custo</p>
               </div>
