--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -155,19 +155,10 @@
                         <td>(61) 0000-0000</td>
                         <td>Ativo</td>
                         <td>
-                          <div class="btn-group btn-group-sm pull-right">
-                            <button type="button" class="btn btn-default-outline dropdown-toggle"
-                                    data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">Ações
-                            </button>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--unidade.html"><i class="fa fa-pencil-square-o mr-xs"
-                                                                   aria-hidden="true"></i>
-                                Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Inativar</a>
-                            </div>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="editar--unidade.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
                           </div>
                         </td>
                       </tr>
@@ -179,19 +170,10 @@
                         <td>(61) 0000-0000</td>
                         <td>Ativo</td>
                         <td>
-                          <div class="btn-group btn-group-sm pull-right">
-                            <button type="button" class="btn btn-default-outline dropdown-toggle"
-                                    data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">Ações
-                            </button>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--unidade.html"><i class="fa fa-pencil-square-o mr-xs"
-                                                                   aria-hidden="true"></i>
-                                Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Inativar</a>
-                            </div>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="editar--unidade.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
                           </div>
                         </td>
                       </tr>
