Ajustes nos "Editar" e ajustes no datatable para ordenar caracteres especiais

--- a/pages/academico/editar--niveis.html
+++ b/pages/academico/editar--niveis.html
@@ -140,10 +140,6 @@
                         <div class="tbl-row">
                           <div class="tbl-cell tbl-cell-title clearfix">
                             <h4 class="semibold"><i class="fa fa-book mr-xs" aria-hidden="true"></i> Materiais didáticos
-                              <small class="text-warning ml-md"><i class="fa fa-exclamation-triangle mr-xs"
-                                                             aria-hidden="true"></i>
-                                Existem pendências nesta listagem
-                              </small>
                             </h4>
                           </div>
                           <div class="tbl-cell tbl-cell-action-bordered">
@@ -157,8 +153,7 @@
                         </div>
                       </header>
                       <div class="card-block">
-
-                        <div class="table-responsive">
+                        <!--<div class="table-responsive">
                           <table class="datatable-on table table-hover">
                             <thead class="hidden-iten">
                             <tr>
@@ -197,6 +192,13 @@
                             </tr>
                             </tbody>
                           </table>
+                        </div>-->
+                        <div class="alert alert-warning" role="alert">
+                          <p class="text-warning ml-md text-center"><i class="fa fa-exclamation-triangle mr-xs"
+                                                               aria-hidden="true"></i>
+                            <strong>Pendência:</strong><br/>
+                            Não existem materiais didáticos assossiados
+                          </p>
                         </div>
                       </div>
                     </section>
