--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -150,7 +150,22 @@
 
                       <tr>
                         <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-                                       href="#ModalDetalhaPosto">Asa sul</a></strong></td>
+                                       href="#ModalDetalhaPosto">Áu sa norte</a></strong></td>
+                        <td>Aline Silveira</td>
+                        <td>(61) 0000-0000</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="editar--unidade.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
+                                       href="#ModalDetalhaPosto">Aa sa sul</a></strong></td>
                         <td>João Carlos Silva</td>
                         <td>(61) 0000-0000</td>
                         <td>Ativo</td>
@@ -165,7 +180,7 @@
 
                       <tr>
                         <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-                                       href="#ModalDetalhaPosto">Asa norte</a></strong></td>
+                                       href="#ModalDetalhaPosto">Ba sa norte</a></strong></td>
                         <td>Aline Silveira</td>
                         <td>(61) 0000-0000</td>
                         <td>Ativo</td>
